docs/api/qiskit/0.24/qiskit.transpiler.passes.Optimize1qGatesDecomposition.mdx
---
title: Optimize1qGatesDecomposition
description: API reference for qiskit.transpiler.passes.Optimize1qGatesDecomposition
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.Optimize1qGatesDecomposition
---

<span id="qiskit-transpiler-passes-optimize1qgatesdecomposition" />

# qiskit.transpiler.passes.Optimize1qGatesDecomposition

<Class id="qiskit.transpiler.passes.Optimize1qGatesDecomposition" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/transpiler/passes/optimization/optimize_1q_decomposition.py" signature="Optimize1qGatesDecomposition(*args, **kwargs)">
  Optimize chains of single-qubit gates by combining them into a single gate.

  Optimize1qGatesDecomposition initializer.

  **Parameters**

  **basis** (*list\[str]*) – Basis gates to consider, e.g. \[‘u3’, ‘cx’]. For the effects of this pass, the basis is the set intersection between the basis parameter and the Euler basis.

  ### \_\_init\_\_

  <Function id="qiskit.transpiler.passes.Optimize1qGatesDecomposition.__init__" name="__init__" signature="__init__(basis=None)">
    Optimize1qGatesDecomposition initializer.

    **Parameters**

    **basis** (*list\[str]*) – Basis gates to consider, e.g. \[‘u3’, ‘cx’]. For the effects of this pass, the basis is the set intersection between the basis parameter and the Euler basis.
  </Function>

  ## Methods

  |                                                                                                                                                          |                                                   |
  | -------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------- |
  | [`__init__`](#qiskit.transpiler.passes.Optimize1qGatesDecomposition.__init__ "qiskit.transpiler.passes.Optimize1qGatesDecomposition.__init__")(\[basis]) | Optimize1qGatesDecomposition initializer.         |
  | [`name`](#qiskit.transpiler.passes.Optimize1qGatesDecomposition.name "qiskit.transpiler.passes.Optimize1qGatesDecomposition.name")()                     | Return the name of the pass.                      |
  | [`run`](#qiskit.transpiler.passes.Optimize1qGatesDecomposition.run "qiskit.transpiler.passes.Optimize1qGatesDecomposition.run")(dag)                     | Run the Optimize1qGatesDecomposition pass on dag. |

  ## Attributes

  |                                                                                                                                                                                          |                                             |
  | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------- |
  | [`is_analysis_pass`](#qiskit.transpiler.passes.Optimize1qGatesDecomposition.is_analysis_pass "qiskit.transpiler.passes.Optimize1qGatesDecomposition.is_analysis_pass")                   | Check if the pass is an analysis pass.      |
  | [`is_transformation_pass`](#qiskit.transpiler.passes.Optimize1qGatesDecomposition.is_transformation_pass "qiskit.transpiler.passes.Optimize1qGatesDecomposition.is_transformation_pass") | Check if the pass is a transformation pass. |

  ### is\_analysis\_pass

  <Function id="qiskit.transpiler.passes.Optimize1qGatesDecomposition.is_analysis_pass" name="is_analysis_pass" signature="property is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Function>

  ### is\_transformation\_pass

  <Function id="qiskit.transpiler.passes.Optimize1qGatesDecomposition.is_transformation_pass" name="is_transformation_pass" signature="property is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Function>

  ### name

  <Function id="qiskit.transpiler.passes.Optimize1qGatesDecomposition.name" name="name" signature="name()">
    Return the name of the pass.
  </Function>

  ### run

  <Function id="qiskit.transpiler.passes.Optimize1qGatesDecomposition.run" name="run" signature="run(dag)">
    Run the Optimize1qGatesDecomposition pass on dag.

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – the DAG to be optimized.

    **Returns**

    the optimized DAG.

    **Return type**

    [DAGCircuit](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")
  </Function>
</Class>

